Fix jquery Event(click) on div#collapse

--- a/app/assets/stylesheets/shared/_banner.scss
+++ b/app/assets/stylesheets/shared/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   height: 350px;
-  background: url('https://images7.alphacoders.com/314/thumb-1920-314110.jpg') no-repeat fixed center;
+  background: url('https://images7.alphacoders.com/314/thumb-1920-314110.jpg') no-repeat center;
   opacity: 0.3;
   text-align: center;
   display: flex;
